@@ -1,3 +1,7 @@
+2009-06-22  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc-mtn.el (vc-mtn-after-dir-status, vc-mtn-dir-status): New functions.
+
 2009-06-23  Kenichi Handa  <handa@m17n.org>
 
 	* language/korea-util.el (korean-key-bindings): Change the binding
